tests/integrations/basic/tests/actual_tests/foomp-rustfix.stderr
error: variable does not need to be mutable
 --> $DIR/foomp-rustfix.rs:5:9
  |
5 |     let mut x = 42;
  |         ----^
  |         |
  |         help: remove this `mut`
  |
note: the lint level is defined here
 --> $DIR/foomp-rustfix.rs:2:9
  |
2 | #![deny(warnings)]
  |         ^^^^^^^^
  = note: `#[deny(unused_mut)]` implied by `#[deny(warnings)]`

error: aborting due to previous error

